# RedisGraph

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
docs/: api.rst  conf.py  graph_algorithms.rst  index.rst
src/redisgraph/: __init__.py
tests/: conftest.py  test_graph_manager.py
