[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphconnectionmanager"
version = "0.1.7"
description = "Generic Redis-based graph connection manager"
authors = ["Zobayer Hasan <zobayer1@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "redisgraph", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
redis = ">=3.5.3"
typing-extensions = { version = ">=3.7.4", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
build = ">=1.2.2.post1"
fakeredis = ">=2.33.0"
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pre-commit = ">=3.5.0"
sphinx = ">=7.1.2"
tox = ">=4.0.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.pytest_cache
  | \.tox
  | \.venv
  | dist
  | docs
  | htmlcov
  | build
)/
'''
